--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,12 +43,12 @@
 		</dependency>
 
 		<!-- Lombok -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 			<scope>provided</scope>
-		</dependency>
+		</dependency> -->
 
 		<!-- Testes -->
 		<dependency>
