--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,6 +11,17 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
+  springapp:
+    build: .
+    container_name: medsync_spring
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/medsyncdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: 123456
+    restart: unless-stopped
 volumes:
   postgres_data:
